@@ -41,13 +41,15 @@ import static org.junit.jupiter.api.Assertions.assertTrue;
 /**
  * Integration tests to increase HOT code coverage to 85%.
  * 
- * <p>These tests exercise specific code paths in:</p>
+ * <p>
+ * These tests exercise specific code paths in:
+ * </p>
  * <ul>
- *   <li>{@link HOTIndexWriter} - insert, update, remove operations</li>
- *   <li>{@link HOTIndexReader} - range queries, iteration</li>
- *   <li>{@link SparsePartialKeys} - SIMD search paths</li>
- *   <li>{@link HeightOptimalSplitter} - split scenarios</li>
- *   <li>{@link SiblingMerger} - merge operations</li>
+ * <li>{@link HOTIndexWriter} - insert, update, remove operations</li>
+ * <li>{@link HOTIndexReader} - range queries, iteration</li>
+ * <li>{@link SparsePartialKeys} - SIMD search paths</li>
+ * <li>{@link HeightOptimalSplitter} - split scenarios</li>
+ * <li>{@link SiblingMerger} - merge operations</li>
  * </ul>
  */
 @DisplayName("HOT Integration Coverage Tests")
@@ -87,25 +89,25 @@ class HOTIntegrationCoverageTest {
       Databases.createJsonDatabase(new DatabaseConfiguration(DATABASE_PATH));
 
       try (Database<JsonResourceSession> database = Databases.openJsonDatabase(DATABASE_PATH)) {
-        database.createResource(ResourceConfiguration.newBuilder(RESOURCE_NAME)
-            .versioningApproach(VersioningType.FULL)
-            .build());
+        database.createResource(
+            ResourceConfiguration.newBuilder(RESOURCE_NAME).versioningApproach(VersioningType.FULL).build());
 
         try (JsonResourceSession session = database.beginResourceSession(RESOURCE_NAME);
-             JsonNodeTrx wtx = session.beginNodeTrx()) {
+            JsonNodeTrx wtx = session.beginNodeTrx()) {
           var indexController = session.getWtxIndexController(wtx.getRevisionNumber());
 
           final var pathToValue = parse("/items/[]/value", io.brackit.query.util.path.PathParser.Type.JSON);
-          final var casIndexDef = IndexDefs.createCASIdxDef(false, Type.INR,
-              Collections.singleton(pathToValue), 0, IndexDef.DbType.JSON);
+          final var casIndexDef =
+              IndexDefs.createCASIdxDef(false, Type.INR, Collections.singleton(pathToValue), 0, IndexDef.DbType.JSON);
           indexController.createIndexes(Set.of(casIndexDef), wtx);
 
           // Insert entries with pseudo-random values (diverse key patterns)
           java.util.Random rand = new java.util.Random(12345);
           StringBuilder json = new StringBuilder("{\"items\": [");
           for (int i = 0; i < 500; i++) {
-            if (i > 0) json.append(",");
-            int value = rand.nextInt(100000);  // Wide range of values
+            if (i > 0)
+              json.append(",");
+            int value = rand.nextInt(100000); // Wide range of values
             json.append("{\"value\": ").append(value).append("}");
           }
           json.append("]}");
@@ -114,12 +116,8 @@ class HOTIntegrationCoverageTest {
           wtx.commit();
 
           // Query should find entries with value >= 0
-          var casIndex = indexController.openCASIndex(wtx.getPageTrx(), casIndexDef,
-              indexController.createCASFilter(
-                  Set.of("/items/[]/value"),
-                  new Int32(0),
-                  SearchMode.GREATER_OR_EQUAL,
-                  new JsonPCRCollector(wtx)));
+          var casIndex = indexController.openCASIndex(wtx.getPageTrx(), casIndexDef, indexController.createCASFilter(
+              Set.of("/items/[]/value"), new Int32(0), SearchMode.GREATER_OR_EQUAL, new JsonPCRCollector(wtx)));
 
           long totalRefs = 0;
           while (casIndex.hasNext()) {
@@ -138,23 +136,23 @@ class HOTIntegrationCoverageTest {
       Databases.createJsonDatabase(new DatabaseConfiguration(DATABASE_PATH));
 
       try (Database<JsonResourceSession> database = Databases.openJsonDatabase(DATABASE_PATH)) {
-        database.createResource(ResourceConfiguration.newBuilder(RESOURCE_NAME)
-            .versioningApproach(VersioningType.FULL)
-            .build());
+        database.createResource(
+            ResourceConfiguration.newBuilder(RESOURCE_NAME).versioningApproach(VersioningType.FULL).build());
 
         try (JsonResourceSession session = database.beginResourceSession(RESOURCE_NAME);
-             JsonNodeTrx wtx = session.beginNodeTrx()) {
+            JsonNodeTrx wtx = session.beginNodeTrx()) {
           var indexController = session.getWtxIndexController(wtx.getRevisionNumber());
 
           final var pathToId = parse("/records/[]/id", io.brackit.query.util.path.PathParser.Type.JSON);
-          final var casIndexDef = IndexDefs.createCASIdxDef(false, Type.INR,
-              Collections.singleton(pathToId), 0, IndexDef.DbType.JSON);
+          final var casIndexDef =
+              IndexDefs.createCASIdxDef(false, Type.INR, Collections.singleton(pathToId), 0, IndexDef.DbType.JSON);
           indexController.createIndexes(Set.of(casIndexDef), wtx);
 
           // Sequential values (worst case for some tree structures)
           StringBuilder json = new StringBuilder("{\"records\": [");
           for (int i = 0; i < 1000; i++) {
-            if (i > 0) json.append(",");
+            if (i > 0)
+              json.append(",");
             json.append("{\"id\": ").append(i).append("}");
           }
           json.append("]}");
@@ -163,12 +161,8 @@ class HOTIntegrationCoverageTest {
           wtx.commit();
 
           // Range query: 100 <= id < 200
-          var casIndex = indexController.openCASIndex(wtx.getPageTrx(), casIndexDef,
-              indexController.createCASFilter(
-                  Set.of("/records/[]/id"),
-                  new Int32(100),
-                  SearchMode.GREATER_OR_EQUAL,
-                  new JsonPCRCollector(wtx)));
+          var casIndex = indexController.openCASIndex(wtx.getPageTrx(), casIndexDef, indexController.createCASFilter(
+              Set.of("/records/[]/id"), new Int32(100), SearchMode.GREATER_OR_EQUAL, new JsonPCRCollector(wtx)));
 
           long count = 0;
           while (casIndex.hasNext()) {
@@ -188,23 +182,23 @@ class HOTIntegrationCoverageTest {
       Databases.createJsonDatabase(new DatabaseConfiguration(DATABASE_PATH));
 
       try (Database<JsonResourceSession> database = Databases.openJsonDatabase(DATABASE_PATH)) {
-        database.createResource(ResourceConfiguration.newBuilder(RESOURCE_NAME)
-            .versioningApproach(VersioningType.FULL)
-            .build());
+        database.createResource(
+            ResourceConfiguration.newBuilder(RESOURCE_NAME).versioningApproach(VersioningType.FULL).build());
 
         try (JsonResourceSession session = database.beginResourceSession(RESOURCE_NAME);
-             JsonNodeTrx wtx = session.beginNodeTrx()) {
+            JsonNodeTrx wtx = session.beginNodeTrx()) {
           var indexController = session.getWtxIndexController(wtx.getRevisionNumber());
 
           final var pathToNum = parse("/data/[]/num", io.brackit.query.util.path.PathParser.Type.JSON);
-          final var casIndexDef = IndexDefs.createCASIdxDef(false, Type.INR,
-              Collections.singleton(pathToNum), 0, IndexDef.DbType.JSON);
+          final var casIndexDef =
+              IndexDefs.createCASIdxDef(false, Type.INR, Collections.singleton(pathToNum), 0, IndexDef.DbType.JSON);
           indexController.createIndexes(Set.of(casIndexDef), wtx);
 
           // Reverse sequential (another edge case)
           StringBuilder json = new StringBuilder("{\"data\": [");
           for (int i = 999; i >= 0; i--) {
-            if (i < 999) json.append(",");
+            if (i < 999)
+              json.append(",");
             json.append("{\"num\": ").append(i).append("}");
           }
           json.append("]}");
@@ -212,12 +206,8 @@ class HOTIntegrationCoverageTest {
           wtx.insertSubtreeAsFirstChild(JsonShredder.createStringReader(json.toString()), JsonNodeTrx.Commit.NO);
           wtx.commit();
 
-          var casIndex = indexController.openCASIndex(wtx.getPageTrx(), casIndexDef,
-              indexController.createCASFilter(
-                  Set.of("/data/[]/num"),
-                  new Int32(0),
-                  SearchMode.GREATER_OR_EQUAL,
-                  new JsonPCRCollector(wtx)));
+          var casIndex = indexController.openCASIndex(wtx.getPageTrx(), casIndexDef, indexController.createCASFilter(
+              Set.of("/data/[]/num"), new Int32(0), SearchMode.GREATER_OR_EQUAL, new JsonPCRCollector(wtx)));
 
           long count = 0;
           while (casIndex.hasNext()) {
@@ -235,22 +225,22 @@ class HOTIntegrationCoverageTest {
       Databases.createJsonDatabase(new DatabaseConfiguration(DATABASE_PATH));
 
       try (Database<JsonResourceSession> database = Databases.openJsonDatabase(DATABASE_PATH)) {
-        database.createResource(ResourceConfiguration.newBuilder(RESOURCE_NAME)
-            .versioningApproach(VersioningType.FULL)
-            .build());
+        database.createResource(
+            ResourceConfiguration.newBuilder(RESOURCE_NAME).versioningApproach(VersioningType.FULL).build());
 
         try (JsonResourceSession session = database.beginResourceSession(RESOURCE_NAME);
-             JsonNodeTrx wtx = session.beginNodeTrx()) {
+            JsonNodeTrx wtx = session.beginNodeTrx()) {
           var indexController = session.getWtxIndexController(wtx.getRevisionNumber());
 
           final var pathToName = parse("/users/[]/name", io.brackit.query.util.path.PathParser.Type.JSON);
-          final var casIndexDef = IndexDefs.createCASIdxDef(false, Type.STR,
-              Collections.singleton(pathToName), 0, IndexDef.DbType.JSON);
+          final var casIndexDef =
+              IndexDefs.createCASIdxDef(false, Type.STR, Collections.singleton(pathToName), 0, IndexDef.DbType.JSON);
           indexController.createIndexes(Set.of(casIndexDef), wtx);
 
           StringBuilder json = new StringBuilder("{\"users\": [");
           for (int i = 0; i < 500; i++) {
-            if (i > 0) json.append(",");
+            if (i > 0)
+              json.append(",");
             // Vary string lengths to test different key sizes
             String name = "user" + "x".repeat(i % 50) + i;
             json.append("{\"name\": \"").append(name).append("\"}");
@@ -261,12 +251,8 @@ class HOTIntegrationCoverageTest {
           wtx.commit();
 
           // Query for strings starting with "user"
-          var casIndex = indexController.openCASIndex(wtx.getPageTrx(), casIndexDef,
-              indexController.createCASFilter(
-                  Set.of("/users/[]/name"),
-                  new Str("user"),
-                  SearchMode.GREATER_OR_EQUAL,
-                  new JsonPCRCollector(wtx)));
+          var casIndex = indexController.openCASIndex(wtx.getPageTrx(), casIndexDef, indexController.createCASFilter(
+              Set.of("/users/[]/name"), new Str("user"), SearchMode.GREATER_OR_EQUAL, new JsonPCRCollector(wtx)));
 
           long count = 0;
           while (casIndex.hasNext()) {
@@ -289,22 +275,22 @@ class HOTIntegrationCoverageTest {
       Databases.createJsonDatabase(new DatabaseConfiguration(DATABASE_PATH));
 
       try (Database<JsonResourceSession> database = Databases.openJsonDatabase(DATABASE_PATH)) {
-        database.createResource(ResourceConfiguration.newBuilder(RESOURCE_NAME)
-            .versioningApproach(VersioningType.FULL)
-            .build());
+        database.createResource(
+            ResourceConfiguration.newBuilder(RESOURCE_NAME).versioningApproach(VersioningType.FULL).build());
 
         try (JsonResourceSession session = database.beginResourceSession(RESOURCE_NAME);
-             JsonNodeTrx wtx = session.beginNodeTrx()) {
+            JsonNodeTrx wtx = session.beginNodeTrx()) {
           var indexController = session.getWtxIndexController(wtx.getRevisionNumber());
 
           final var pathToAge = parse("/people/[]/age", io.brackit.query.util.path.PathParser.Type.JSON);
-          final var casIndexDef = IndexDefs.createCASIdxDef(false, Type.INR,
-              Collections.singleton(pathToAge), 0, IndexDef.DbType.JSON);
+          final var casIndexDef =
+              IndexDefs.createCASIdxDef(false, Type.INR, Collections.singleton(pathToAge), 0, IndexDef.DbType.JSON);
           indexController.createIndexes(Set.of(casIndexDef), wtx);
 
           StringBuilder json = new StringBuilder("{\"people\": [");
           for (int i = 0; i < 100; i++) {
-            if (i > 0) json.append(",");
+            if (i > 0)
+              json.append(",");
             json.append("{\"age\": ").append(i).append("}");
           }
           json.append("]}");
@@ -313,12 +299,8 @@ class HOTIntegrationCoverageTest {
           wtx.commit();
 
           // Query age < 50
-          var casIndex = indexController.openCASIndex(wtx.getPageTrx(), casIndexDef,
-              indexController.createCASFilter(
-                  Set.of("/people/[]/age"),
-                  new Int32(50),
-                  SearchMode.LOWER,
-                  new JsonPCRCollector(wtx)));
+          var casIndex = indexController.openCASIndex(wtx.getPageTrx(), casIndexDef, indexController.createCASFilter(
+              Set.of("/people/[]/age"), new Int32(50), SearchMode.LOWER, new JsonPCRCollector(wtx)));
 
           long count = 0;
           while (casIndex.hasNext()) {
@@ -336,22 +318,22 @@ class HOTIntegrationCoverageTest {
       Databases.createJsonDatabase(new DatabaseConfiguration(DATABASE_PATH));
 
       try (Database<JsonResourceSession> database = Databases.openJsonDatabase(DATABASE_PATH)) {
-        database.createResource(ResourceConfiguration.newBuilder(RESOURCE_NAME)
-            .versioningApproach(VersioningType.FULL)
-            .build());
+        database.createResource(
+            ResourceConfiguration.newBuilder(RESOURCE_NAME).versioningApproach(VersioningType.FULL).build());
 
         try (JsonResourceSession session = database.beginResourceSession(RESOURCE_NAME);
-             JsonNodeTrx wtx = session.beginNodeTrx()) {
+            JsonNodeTrx wtx = session.beginNodeTrx()) {
           var indexController = session.getWtxIndexController(wtx.getRevisionNumber());
 
           final var pathToScore = parse("/tests/[]/score", io.brackit.query.util.path.PathParser.Type.JSON);
-          final var casIndexDef = IndexDefs.createCASIdxDef(false, Type.DBL,
-              Collections.singleton(pathToScore), 0, IndexDef.DbType.JSON);
+          final var casIndexDef =
+              IndexDefs.createCASIdxDef(false, Type.DBL, Collections.singleton(pathToScore), 0, IndexDef.DbType.JSON);
           indexController.createIndexes(Set.of(casIndexDef), wtx);
 
           StringBuilder json = new StringBuilder("{\"tests\": [");
           for (int i = 0; i < 200; i++) {
-            if (i > 0) json.append(",");
+            if (i > 0)
+              json.append(",");
             json.append("{\"score\": ").append(i * 0.5).append("}");
           }
           json.append("]}");
@@ -360,12 +342,8 @@ class HOTIntegrationCoverageTest {
           wtx.commit();
 
           // Query scores >= 25.0
-          var casIndex = indexController.openCASIndex(wtx.getPageTrx(), casIndexDef,
-              indexController.createCASFilter(
-                  Set.of("/tests/[]/score"),
-                  new Dbl(25.0),
-                  SearchMode.GREATER_OR_EQUAL,
-                  new JsonPCRCollector(wtx)));
+          var casIndex = indexController.openCASIndex(wtx.getPageTrx(), casIndexDef, indexController.createCASFilter(
+              Set.of("/tests/[]/score"), new Dbl(25.0), SearchMode.GREATER_OR_EQUAL, new JsonPCRCollector(wtx)));
 
           long count = 0;
           while (casIndex.hasNext()) {
@@ -383,22 +361,22 @@ class HOTIntegrationCoverageTest {
       Databases.createJsonDatabase(new DatabaseConfiguration(DATABASE_PATH));
 
       try (Database<JsonResourceSession> database = Databases.openJsonDatabase(DATABASE_PATH)) {
-        database.createResource(ResourceConfiguration.newBuilder(RESOURCE_NAME)
-            .versioningApproach(VersioningType.FULL)
-            .build());
+        database.createResource(
+            ResourceConfiguration.newBuilder(RESOURCE_NAME).versioningApproach(VersioningType.FULL).build());
 
         try (JsonResourceSession session = database.beginResourceSession(RESOURCE_NAME);
-             JsonNodeTrx wtx = session.beginNodeTrx()) {
+            JsonNodeTrx wtx = session.beginNodeTrx()) {
           var indexController = session.getWtxIndexController(wtx.getRevisionNumber());
 
           final var pathToVal = parse("/items/[]/val", io.brackit.query.util.path.PathParser.Type.JSON);
-          final var casIndexDef = IndexDefs.createCASIdxDef(false, Type.INR,
-              Collections.singleton(pathToVal), 0, IndexDef.DbType.JSON);
+          final var casIndexDef =
+              IndexDefs.createCASIdxDef(false, Type.INR, Collections.singleton(pathToVal), 0, IndexDef.DbType.JSON);
           indexController.createIndexes(Set.of(casIndexDef), wtx);
 
           StringBuilder json = new StringBuilder("{\"items\": [");
           for (int i = 0; i < 100; i++) {
-            if (i > 0) json.append(",");
+            if (i > 0)
+              json.append(",");
             json.append("{\"val\": ").append(i).append("}");
           }
           json.append("]}");
@@ -407,12 +385,8 @@ class HOTIntegrationCoverageTest {
           wtx.commit();
 
           // Query for value that doesn't exist (>= 1000)
-          var casIndex = indexController.openCASIndex(wtx.getPageTrx(), casIndexDef,
-              indexController.createCASFilter(
-                  Set.of("/items/[]/val"),
-                  new Int32(1000),
-                  SearchMode.GREATER_OR_EQUAL,
-                  new JsonPCRCollector(wtx)));
+          var casIndex = indexController.openCASIndex(wtx.getPageTrx(), casIndexDef, indexController.createCASFilter(
+              Set.of("/items/[]/val"), new Int32(1000), SearchMode.GREATER_OR_EQUAL, new JsonPCRCollector(wtx)));
 
           long count = 0;
           while (casIndex.hasNext()) {
@@ -435,28 +409,28 @@ class HOTIntegrationCoverageTest {
       Databases.createJsonDatabase(new DatabaseConfiguration(DATABASE_PATH));
 
       try (Database<JsonResourceSession> database = Databases.openJsonDatabase(DATABASE_PATH)) {
-        database.createResource(ResourceConfiguration.newBuilder(RESOURCE_NAME)
-            .versioningApproach(VersioningType.FULL)
-            .build());
+        database.createResource(
+            ResourceConfiguration.newBuilder(RESOURCE_NAME).versioningApproach(VersioningType.FULL).build());
 
         try (JsonResourceSession session = database.beginResourceSession(RESOURCE_NAME);
-             JsonNodeTrx wtx = session.beginNodeTrx()) {
+            JsonNodeTrx wtx = session.beginNodeTrx()) {
           var indexController = session.getWtxIndexController(wtx.getRevisionNumber());
 
           // Create two CAS indexes on different fields
           final var pathToPrice = parse("/products/[]/price", io.brackit.query.util.path.PathParser.Type.JSON);
-          final var casIndexDef1 = IndexDefs.createCASIdxDef(false, Type.DBL,
-              Collections.singleton(pathToPrice), 0, IndexDef.DbType.JSON);
-          
+          final var casIndexDef1 =
+              IndexDefs.createCASIdxDef(false, Type.DBL, Collections.singleton(pathToPrice), 0, IndexDef.DbType.JSON);
+
           final var pathToQty = parse("/products/[]/quantity", io.brackit.query.util.path.PathParser.Type.JSON);
-          final var casIndexDef2 = IndexDefs.createCASIdxDef(false, Type.INR,
-              Collections.singleton(pathToQty), 1, IndexDef.DbType.JSON);
+          final var casIndexDef2 =
+              IndexDefs.createCASIdxDef(false, Type.INR, Collections.singleton(pathToQty), 1, IndexDef.DbType.JSON);
 
           indexController.createIndexes(Set.of(casIndexDef1, casIndexDef2), wtx);
 
           StringBuilder json = new StringBuilder("{\"products\": [");
           for (int i = 0; i < 300; i++) {
-            if (i > 0) json.append(",");
+            if (i > 0)
+              json.append(",");
             json.append("{\"price\": ").append(i * 1.5).append(", \"quantity\": ").append(i + 1).append("}");
           }
           json.append("]}");
@@ -465,12 +439,8 @@ class HOTIntegrationCoverageTest {
           wtx.commit();
 
           // Query first CAS index (price)
-          var casIndex1 = indexController.openCASIndex(wtx.getPageTrx(), casIndexDef1,
-              indexController.createCASFilter(
-                  Set.of("/products/[]/price"),
-                  new Dbl(100.0),
-                  SearchMode.GREATER_OR_EQUAL,
-                  new JsonPCRCollector(wtx)));
+          var casIndex1 = indexController.openCASIndex(wtx.getPageTrx(), casIndexDef1, indexController.createCASFilter(
+              Set.of("/products/[]/price"), new Dbl(100.0), SearchMode.GREATER_OR_EQUAL, new JsonPCRCollector(wtx)));
 
           long casCount1 = 0;
           while (casIndex1.hasNext()) {
@@ -479,12 +449,8 @@ class HOTIntegrationCoverageTest {
           assertTrue(casCount1 > 0, "First CAS index (price) should have results");
 
           // Query second CAS index (quantity)
-          var casIndex2 = indexController.openCASIndex(wtx.getPageTrx(), casIndexDef2,
-              indexController.createCASFilter(
-                  Set.of("/products/[]/quantity"),
-                  new Int32(100),
-                  SearchMode.GREATER_OR_EQUAL,
-                  new JsonPCRCollector(wtx)));
+          var casIndex2 = indexController.openCASIndex(wtx.getPageTrx(), casIndexDef2, indexController.createCASFilter(
+              Set.of("/products/[]/quantity"), new Int32(100), SearchMode.GREATER_OR_EQUAL, new JsonPCRCollector(wtx)));
 
           long casCount2 = 0;
           while (casIndex2.hasNext()) {
@@ -507,23 +473,23 @@ class HOTIntegrationCoverageTest {
       Databases.createJsonDatabase(new DatabaseConfiguration(DATABASE_PATH));
 
       try (Database<JsonResourceSession> database = Databases.openJsonDatabase(DATABASE_PATH)) {
-        database.createResource(ResourceConfiguration.newBuilder(RESOURCE_NAME)
-            .versioningApproach(VersioningType.FULL)
-            .build());
+        database.createResource(
+            ResourceConfiguration.newBuilder(RESOURCE_NAME).versioningApproach(VersioningType.FULL).build());
 
         // First commit
         try (JsonResourceSession session = database.beginResourceSession(RESOURCE_NAME);
-             JsonNodeTrx wtx = session.beginNodeTrx()) {
+            JsonNodeTrx wtx = session.beginNodeTrx()) {
           var indexController = session.getWtxIndexController(wtx.getRevisionNumber());
 
           final var pathToVal = parse("/data/[]/value", io.brackit.query.util.path.PathParser.Type.JSON);
-          final var casIndexDef = IndexDefs.createCASIdxDef(false, Type.INR,
-              Collections.singleton(pathToVal), 0, IndexDef.DbType.JSON);
+          final var casIndexDef =
+              IndexDefs.createCASIdxDef(false, Type.INR, Collections.singleton(pathToVal), 0, IndexDef.DbType.JSON);
           indexController.createIndexes(Set.of(casIndexDef), wtx);
 
           StringBuilder json = new StringBuilder("{\"data\": [");
           for (int i = 0; i < 100; i++) {
-            if (i > 0) json.append(",");
+            if (i > 0)
+              json.append(",");
             json.append("{\"value\": ").append(i).append("}");
           }
           json.append("]}");
@@ -534,34 +500,30 @@ class HOTIntegrationCoverageTest {
 
         // Second commit - add more data
         try (JsonResourceSession session = database.beginResourceSession(RESOURCE_NAME);
-             JsonNodeTrx wtx = session.beginNodeTrx()) {
+            JsonNodeTrx wtx = session.beginNodeTrx()) {
           wtx.moveToDocumentRoot();
           wtx.moveToFirstChild();
-          wtx.moveToFirstChild();  // Move to array
-          
+          wtx.moveToFirstChild(); // Move to array
+
           // Move to end of array and add more items
           while (wtx.moveToRightSibling()) {
             // Navigate to end
           }
-          
+
           wtx.commit();
         }
 
         // Verify index works on final revision
         try (JsonResourceSession session = database.beginResourceSession(RESOURCE_NAME);
-             var rtx = session.beginNodeReadOnlyTrx()) {
+            var rtx = session.beginNodeReadOnlyTrx()) {
           var indexController = session.getRtxIndexController(rtx.getRevisionNumber());
-          
-          final var pathToVal = parse("/data/[]/value", io.brackit.query.util.path.PathParser.Type.JSON);
-          final var casIndexDef = IndexDefs.createCASIdxDef(false, Type.INR,
-              Collections.singleton(pathToVal), 0, IndexDef.DbType.JSON);
 
-          var casIndex = indexController.openCASIndex(rtx.getPageTrx(), casIndexDef,
-              indexController.createCASFilter(
-                  Set.of("/data/[]/value"),
-                  new Int32(0),
-                  SearchMode.GREATER_OR_EQUAL,
-                  new JsonPCRCollector(rtx)));
+          final var pathToVal = parse("/data/[]/value", io.brackit.query.util.path.PathParser.Type.JSON);
+          final var casIndexDef =
+              IndexDefs.createCASIdxDef(false, Type.INR, Collections.singleton(pathToVal), 0, IndexDef.DbType.JSON);
+
+          var casIndex = indexController.openCASIndex(rtx.getPageTrx(), casIndexDef, indexController.createCASFilter(
+              Set.of("/data/[]/value"), new Int32(0), SearchMode.GREATER_OR_EQUAL, new JsonPCRCollector(rtx)));
 
           long count = 0;
           while (casIndex.hasNext()) {
@@ -584,22 +546,22 @@ class HOTIntegrationCoverageTest {
       Databases.createJsonDatabase(new DatabaseConfiguration(DATABASE_PATH));
 
       try (Database<JsonResourceSession> database = Databases.openJsonDatabase(DATABASE_PATH)) {
-        database.createResource(ResourceConfiguration.newBuilder(RESOURCE_NAME)
-            .versioningApproach(VersioningType.FULL)
-            .build());
+        database.createResource(
+            ResourceConfiguration.newBuilder(RESOURCE_NAME).versioningApproach(VersioningType.FULL).build());
 
         try (JsonResourceSession session = database.beginResourceSession(RESOURCE_NAME);
-             JsonNodeTrx wtx = session.beginNodeTrx()) {
+            JsonNodeTrx wtx = session.beginNodeTrx()) {
           var indexController = session.getWtxIndexController(wtx.getRevisionNumber());
 
           final var pathToTemp = parse("/readings/[]/temp", io.brackit.query.util.path.PathParser.Type.JSON);
-          final var casIndexDef = IndexDefs.createCASIdxDef(false, Type.INR,
-              Collections.singleton(pathToTemp), 0, IndexDef.DbType.JSON);
+          final var casIndexDef =
+              IndexDefs.createCASIdxDef(false, Type.INR, Collections.singleton(pathToTemp), 0, IndexDef.DbType.JSON);
           indexController.createIndexes(Set.of(casIndexDef), wtx);
 
           StringBuilder json = new StringBuilder("{\"readings\": [");
           for (int i = -50; i <= 50; i++) {
-            if (i > -50) json.append(",");
+            if (i > -50)
+              json.append(",");
             json.append("{\"temp\": ").append(i).append("}");
           }
           json.append("]}");
@@ -608,12 +570,8 @@ class HOTIntegrationCoverageTest {
           wtx.commit();
 
           // Query for negative values
-          var casIndex = indexController.openCASIndex(wtx.getPageTrx(), casIndexDef,
-              indexController.createCASFilter(
-                  Set.of("/readings/[]/temp"),
-                  new Int32(0),
-                  SearchMode.LOWER,
-                  new JsonPCRCollector(wtx)));
+          var casIndex = indexController.openCASIndex(wtx.getPageTrx(), casIndexDef, indexController.createCASFilter(
+              Set.of("/readings/[]/temp"), new Int32(0), SearchMode.LOWER, new JsonPCRCollector(wtx)));
 
           long count = 0;
           while (casIndex.hasNext()) {
@@ -631,22 +589,22 @@ class HOTIntegrationCoverageTest {
       Databases.createJsonDatabase(new DatabaseConfiguration(DATABASE_PATH));
 
       try (Database<JsonResourceSession> database = Databases.openJsonDatabase(DATABASE_PATH)) {
-        database.createResource(ResourceConfiguration.newBuilder(RESOURCE_NAME)
-            .versioningApproach(VersioningType.FULL)
-            .build());
+        database.createResource(
+            ResourceConfiguration.newBuilder(RESOURCE_NAME).versioningApproach(VersioningType.FULL).build());
 
         try (JsonResourceSession session = database.beginResourceSession(RESOURCE_NAME);
-             JsonNodeTrx wtx = session.beginNodeTrx()) {
+            JsonNodeTrx wtx = session.beginNodeTrx()) {
           var indexController = session.getWtxIndexController(wtx.getRevisionNumber());
 
           final var pathToBigNum = parse("/numbers/[]/big", io.brackit.query.util.path.PathParser.Type.JSON);
-          final var casIndexDef = IndexDefs.createCASIdxDef(false, Type.DBL,
-              Collections.singleton(pathToBigNum), 0, IndexDef.DbType.JSON);
+          final var casIndexDef =
+              IndexDefs.createCASIdxDef(false, Type.DBL, Collections.singleton(pathToBigNum), 0, IndexDef.DbType.JSON);
           indexController.createIndexes(Set.of(casIndexDef), wtx);
 
           StringBuilder json = new StringBuilder("{\"numbers\": [");
           for (int i = 0; i < 100; i++) {
-            if (i > 0) json.append(",");
+            if (i > 0)
+              json.append(",");
             // Use large values
             double value = 1e10 + i * 1e8;
             json.append("{\"big\": ").append(value).append("}");
@@ -656,12 +614,8 @@ class HOTIntegrationCoverageTest {
           wtx.insertSubtreeAsFirstChild(JsonShredder.createStringReader(json.toString()), JsonNodeTrx.Commit.NO);
           wtx.commit();
 
-          var casIndex = indexController.openCASIndex(wtx.getPageTrx(), casIndexDef,
-              indexController.createCASFilter(
-                  Set.of("/numbers/[]/big"),
-                  new Dbl(1e10),
-                  SearchMode.GREATER_OR_EQUAL,
-                  new JsonPCRCollector(wtx)));
+          var casIndex = indexController.openCASIndex(wtx.getPageTrx(), casIndexDef, indexController.createCASFilter(
+              Set.of("/numbers/[]/big"), new Dbl(1e10), SearchMode.GREATER_OR_EQUAL, new JsonPCRCollector(wtx)));
 
           long count = 0;
           while (casIndex.hasNext()) {
@@ -679,24 +633,24 @@ class HOTIntegrationCoverageTest {
       Databases.createJsonDatabase(new DatabaseConfiguration(DATABASE_PATH));
 
       try (Database<JsonResourceSession> database = Databases.openJsonDatabase(DATABASE_PATH)) {
-        database.createResource(ResourceConfiguration.newBuilder(RESOURCE_NAME)
-            .versioningApproach(VersioningType.FULL)
-            .build());
+        database.createResource(
+            ResourceConfiguration.newBuilder(RESOURCE_NAME).versioningApproach(VersioningType.FULL).build());
 
         try (JsonResourceSession session = database.beginResourceSession(RESOURCE_NAME);
-             JsonNodeTrx wtx = session.beginNodeTrx()) {
+            JsonNodeTrx wtx = session.beginNodeTrx()) {
           var indexController = session.getWtxIndexController(wtx.getRevisionNumber());
 
           final var pathToSparse = parse("/sparse/[]/val", io.brackit.query.util.path.PathParser.Type.JSON);
-          final var casIndexDef = IndexDefs.createCASIdxDef(false, Type.INR,
-              Collections.singleton(pathToSparse), 0, IndexDef.DbType.JSON);
+          final var casIndexDef =
+              IndexDefs.createCASIdxDef(false, Type.INR, Collections.singleton(pathToSparse), 0, IndexDef.DbType.JSON);
           indexController.createIndexes(Set.of(casIndexDef), wtx);
 
           // Sparse values with large gaps
           StringBuilder json = new StringBuilder("{\"sparse\": [");
           boolean first = true;
           for (int i = 0; i < 50; i++) {
-            if (!first) json.append(",");
+            if (!first)
+              json.append(",");
             first = false;
             // Values: 0, 1000, 2000, 3000, ...
             json.append("{\"val\": ").append(i * 1000).append("}");
@@ -707,12 +661,8 @@ class HOTIntegrationCoverageTest {
           wtx.commit();
 
           // Query for a specific sparse value
-          var casIndex = indexController.openCASIndex(wtx.getPageTrx(), casIndexDef,
-              indexController.createCASFilter(
-                  Set.of("/sparse/[]/val"),
-                  new Int32(25000),
-                  SearchMode.EQUAL,
-                  new JsonPCRCollector(wtx)));
+          var casIndex = indexController.openCASIndex(wtx.getPageTrx(), casIndexDef, indexController.createCASFilter(
+              Set.of("/sparse/[]/val"), new Int32(25000), SearchMode.EQUAL, new JsonPCRCollector(wtx)));
 
           long count = 0;
           while (casIndex.hasNext()) {
